--- a/.github/workflows/Dotnet-reusable.yml
+++ b/.github/workflows/Dotnet-reusable.yml
@@ -1,100 +1,72 @@
-name: Reusable Dotnet Workflow
+name: VSTest Reusable Workflow
 
 on:
   workflow_call:
     inputs:
-      command:
+      runsOn:
         required: true
         type: string
-      projects:
+      dotnet-version:
         required: true
         type: string
-      arguments:
-        required: false
-        type: string
-      nugetConfigPath:
-        required: true
-        type: string
-      packagesToPack:
+      test-assembly:
         required: true
         type: string
       configuration:
         required: true
         type: string
-      custom:
-        required: true
-        type: boolean
-      restoreArguments:
-        required: true
-        type: string
-      testRunTitle:
+      platform:
         required: false
         type: string
-      modifyOutputPath:
-        required: true
+      code-coverage-enabled:
+        required: false
         type: boolean
-      packDirectory:
-        required: true
-        type: string
-      nobuild:
-        required: true
-        type: boolean
-      includesymbols:
-        required: true
-        type: boolean
-      includesource:
-        required: true
-        type: boolean
-      requestTimeout:
+      test-run-title:
         required: false
         type: string
-      noCache:
-        required: true
+      run-in-parallel:
+        required: false
         type: boolean
-      restoreDirectory:
-        required: true
-        type: string
-      verbosityRestore:
-        required: true
-        type: string
-      sensitiveAlphanumericInfo1:
-        required: true
-        type: string
-      versioningScheme:
+      testPlan:
         required: false
         type: string
-      versionEnvVar:
-        required: true
+      testSuite:
+        required: false
         type: string
-      majorVersion:
-        required: true
+      testConfiguration:
+        required: false
         type: string
-      minorVersion:
-        required: true
+      tcmTestRun:
+        required: false
         type: string
-      patchVersion:
-        required: true
+      uiTests:
+        required: false
+        type: boolean
+      vsTestVersion:
+        required: false
         type: string
-      buildProperties:
-        required: true
+      vstestLocation:
+        required: false
         type: string
-      verbosityPack:
-        required: true
+      diagnosticsEnabled:
+        required: false
+        type: boolean
+      rerunFailedTests:
+        required: false
+        type: boolean
+      rerunType:
+        required: false
         type: string
-      workingDirectory:
-        required: true
+      rerunMaxAttempts:
+        required: false
         type: string
+      dontDistribute:
+        required: false
+        type: boolean
 
 jobs:
-  dotnet:
-    runs-on: windows-latest
-    defaults:
-      run:
-        working-directory: ${{ inputs.workingDirectory }}
-
-    env:
-      VERSION: ${{ inputs.majorVersion }}.${{ inputs.minorVersion }}.${{ inputs.patchVersion }}
-
+  run-tests:
+    runs-on: ${{ inputs.runsOn }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -102,37 +74,10 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '9.0.201'
+          dotnet-version: ${{ inputs.dotnet-version }}
 
-      - name: Set version env var (optional use)
-        shell: bash
-        run: echo "${{ inputs.versionEnvVar }}=$VERSION" >> $GITHUB_ENV
+      - name: Restore dependencies
+        run: dotnet restore tests/UnitTests/UnitTests.csproj
 
-      - name: Run dotnet ${{ inputs.command }}
-        shell: bash
-        run: |
-          if [[ "${{ inputs.command }}" == "restore" ]]; then
-            dotnet restore "${{ inputs.projects }}" 
-              --configfile "${{ inputs.nugetConfigPath }}" 
-              ${{ inputs.restoreArguments }} 
-              --no-cache="${{ inputs.noCache }}" 
-              --packages "${{ inputs.restoreDirectory }}" 
-              --verbosity "${{ inputs.verbosityRestore }}"
-
-          elif [[ "${{ inputs.command }}" == "build" ]]; then
-            dotnet build "${{ inputs.projects }}" ${{ inputs.arguments }}
-
-          elif [[ "${{ inputs.command }}" == "test" ]]; then
-            dotnet test "${{ inputs.projects }}" ${{ inputs.arguments }} 
-              --logger "trx;LogFileName=${{ inputs.testRunTitle }}.trx"
-
-          elif [[ "${{ inputs.command }}" == "pack" ]]; then
-            dotnet pack "${{ inputs.packagesToPack }}" 
-              --configuration "${{ inputs.configuration }}" 
-              --output "${{ inputs.packDirectory }}" 
-              --no-build="${{ inputs.nobuild }}" 
-              --include-symbols="${{ inputs.includesymbols }}" 
-              --include-source="${{ inputs.includesource }}" 
-              --property "Version=$VERSION;SensitiveAlphanumericInfo3=${{ inputs.sensitiveAlphanumericInfo1 }};${{ inputs.buildProperties }}" 
-              --verbosity "${{ inputs.verbosityPack }}"
-          fi
+      - name: Build project
+        run: dotnet build tests/UnitTests/UnitTests.csproj --configuration ${{ inputs.configuration }} --no-restore
